# JPG-to-ASCII

./: CMakeLists.txt  README.md
doc/html/: annotated.html  classes.html  classmainwindow-members.html  classmainwindow.html  dir_228948bd73d70eb6455a29997209c93f.html  dir_47eec5d6eb2b37441b518b8730455d24.html  dir_57fe1dc813ba6c28f19317d008fd4224.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_795870b97de5657792112a84cdf01b45.html  dir_847e90aed41a95e3aaad45f3d1111056.html  dir_8ceffd4ee35c3518d4e8bdc7e638efe8.html  dir_92807cd19fe8267db0f5194e1a15fd85.html  dir_98cdb10f369f6a3b9149e010b312bf5d.html  dir_a22b3eedc54bfb8cc2a5948a5dd8200b.html  dir_a94c288113dec02aad878fda33382b15.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b48c2b3697ca967239d3d08b31329118.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_da7860420ee411707bcaaa51f177cd44.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_e6bb53534ac0e427887cf7a94c0c004e.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html
doc/html/search/: all_1.js  all_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_1.js  variables_2.js
src/: CMakeLists.txt
src/forms/: mainwindow.qrc  mainwindow.ui
src/include/: mainwindow.h
src/src/: main.cpp  mainwindow.cpp
